# omni-mental-overload

./: .env.local  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  lessons.md  progress.md
apps/api/: .env  .gitignore  Dockerfile  README.md  eslint.config.js  package.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/prisma/migrations/20250829135254_init/: migration.sql
apps/api/src/: index.ts  worker.ts
apps/api/src/db/: prisma.ts
apps/api/src/features/campaigns/: campaign.repo.ts  campaign.schema.ts  campaign.service.ts
apps/api/src/features/jobs/: job.repo.ts
apps/api/src/features/leads/: lead.repo.ts
apps/api/src/http/: campaigns.router.ts  health.router.ts  jobs.router.ts
apps/api/src/lib/: errors.ts  hash.ts  http.ts  queue.ts
apps/api/src/workers/: crawl.worker.ts  dispatch.worker.ts  index.ts  qualify.worker.ts
apps/crawler/: .env  Dockerfile  pyproject.toml
apps/crawler/app/: main.py
apps/crawler/app/api/: crawl.py
apps/crawler/app/core/: config.py  crawl_service.py  enrich.py  hash.py
apps/crawler/app/io/: db.py  endpoints.py  html_parser.py  http_client.py
apps/crawler/app/io/providers/: instagram.py
apps/crawler/app/models/: crawl.py
apps/crawler/app/tests/: test_enrich.py  test_hash.py  test_html_parser.py  test_repo.py
docs/: PRD.md  ROADMAP.md  architecture-data-flow.md
