[project]
name = "crawler"
version = "0.1.0"
description = "FastAPI crawler using curl_cffi"
authors = [{name = "Omni"}]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn>=0.30.0",
  "curl_cffi>=0.6.0",
  "asyncpg>=0.29.0",
  "pydantic>=2.7.0"
]

[tool.uv]
dev-dependencies = [
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1"
]
