[project]
name = "crawler"
version = "0.1.0"
description = "FastAPI crawler using curl_cffi"
authors = [{name = "Omni"}]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn>=0.30.0",
  "curl_cffi>=0.6.0",
  "asyncpg>=0.29.0",
  "pydantic>=2.7.0",
  "selectolax>=0.3.21"
]

[tool.uv]
dev-dependencies = [
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "ruff>=0.5.5",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "mypy>=1.10.0"
]

[tool.ruff]
# Keep in sync with TS/Prettier where sensible
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort (imports)
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
